--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_2143783_iq6z4ey5vu.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/font_2143783_iq6z4ey5vu.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>云商城</title>
   </head>
   <body>
